# parsel-cli

./: .flake8  LICENSE  README.md  changelog.md  pylintrc  pyproject.toml  readme.md  recipes.md  requirements-tests.txt  requirements.txt  setup.py
.github/workflows/: main.yml
parselcli/: app.py  cli.py  completer.py  config.py  embed.py  parse.py  processors.py  prompt.py  utils.py
parselcli/prompt/: __init__.py  commands.py  runner.py  utils.py
parselcli/render/: __init__.py  browser.py  filesys.py  http.py  memory.py
tests/: test_parse.py  test_processors.py  test_prompt.py  test_utils.py
tests/test_render/: test_browser.py  test_http.py
